--- a/Veselova2019Project14/Veselova2019Project14.tex
+++ b/Veselova2019Project14/Veselova2019Project14.tex
@@ -1,6 +1,5 @@
-\documentclass[12pt,twoside]{article}
+\documentclass[12pt,twosides]{article}
 \usepackage{jmlda}
-\usepackage{graphicx, epsfig}
 %\NOREVIEWERNOTES
 
 \title
@@ -11,15 +10,14 @@
 {Веселова~Е.Р.$^1$} 
 % [] список авторов, выводимый в заголовок; не нужен, если он не отличается от основного
 \thanks
-	{Научный руководитель:  Стрижов~В.\,В.
-	Задачу поставил:  Эксперт~И.\,О.
-	Консультант:  Исаченко Р.}
+	{Задачу поставил:  Grudinin~S.
+	Консультант:  Pages G.}
 \email
 {veselova.er@phystech.edu}
 \organization
 {$^1$Московский физико-технический институт (МФТИ)}
 \abstract
-{My abstract.
+{В работе рассматривается задача регрессионного выделения осей симметрии и классификационного выделения порядков найденных осей. Обе задачи решаются с помощью применения сверточных нейросетей к синтетическому датасету, полученному размножением 3D моделей белковых структур. Кроме того, предлагается перенести методы 2D аугментации на используемые 3D данные. Итоговая модель сравнивается с построенной в TensorFlow готовой моделью, не использующей вращения и трансляции данных. Решение данной задачи позволит увеличить точность обработки и автоматического выделения свойств белков. 
 	
 \bigskip
 \textbf{Ключевые слова}: \emph {CNN}}
@@ -44,8 +42,9 @@
 	\section{Введение}
 
 	\section{Вывод}
-	
+
 	\bibliographystyle{plain}
+	\nocite{bb86866}
 	\bibliography{Veselova2019Project14}
 	
 \end{document}
