--- a/Veselova2019Project14/Veselova2019Project14.bib
+++ b/Veselova2019Project14/Veselova2019Project14.bib
@@ -1,11 +1,21 @@
-@Article{bb86866,
-	author    = {V. K. Jirsa and K. J. Jantzen and A. Fuchs and J. A. S. Kelso},
-	title     = {Spatiotemporal forward solution of the {EEG} and {MEG} using network modeling},
-	journal   = {IEEE Trans. Medical Imaging},
-	year      = {2002},
-	volume    = {21},
-	number    = {5},
-	pages     = {493--504},
-	month     = may,
-	bibsource = {http://www.visionbib.com/bibliography/medical881.html#TT83231},
+@Article{journals/corr/BiettiM17,
+	title =	"Group Invariance and Stability to Deformations of Deep
+	Convolutional Representations",
+	author = "Alberto Bietti and Julien Mairal",
+	journal = "CoRR",
+	year = 	"2017",
+	volume = "abs/1706.03078",
+	bibdate = "2018-08-13",
+	bibsource =	"DBLP,
+	http://dblp.uni-trier.de/db/journals/corr/corr1706.html#BiettiM17",
+	URL = "http://arxiv.org/abs/1706.03078",
+}
+
+@Article{MitGuiPau06,
+	author = "Mitra and Guibas and Pauly",
+	title =	"Partial and Approximate Symmetry Detection for 3{D}
+	Geometry",
+	journal = "ACMTG: ACM Transactions on Graphics",
+	volume = "25",
+	year = "2006",
 }
