--- a/Veselova2019Project14/Veselova2019Project14.tex
+++ b/Veselova2019Project14/Veselova2019Project14.tex
@@ -41,10 +41,11 @@
 	
 	\section{Введение}
 
+	\cite[Prev]{journals/corr/BiettiM17}
+
 	\section{Вывод}
 
 	\bibliographystyle{plain}
-	\nocite{bb86866}
 	\bibliography{Veselova2019Project14}
 	
 \end{document}
