Introduction was added, bibliography was expanded

--- a/Veselova2019Project14/Veselova2019Project14.bib
+++ b/Veselova2019Project14/Veselova2019Project14.bib
@@ -1,4 +1,4 @@
-@Article{journals/corr/BiettiM17,
+@article{journals/corr/BiettiM17,
 	title =	"Group Invariance and Stability to Deformations of Deep
 	Convolutional Representations",
 	author = "Alberto Bietti and Julien Mairal",
@@ -11,11 +11,78 @@
 	URL = "http://arxiv.org/abs/1706.03078",
 }
 
-@Article{MitGuiPau06,
+@article{MitGuiPau06,
 	author = "Mitra and Guibas and Pauly",
 	title =	"Partial and Approximate Symmetry Detection for 3{D}
 	Geometry",
 	journal = "ACMTG: ACM Transactions on Graphics",
 	volume = "25",
 	year = "2006",
+}
+
+@article{DBLP:journals/corr/abs-1807-02547,
+	author = {Maurice Weiler and
+	Mario Geiger and
+	Max Welling and
+	Wouter Boomsma and
+	Taco Cohen},
+	title = {3D Steerable CNNs: Learning Rotationally Equivariant Features in Volumetric
+	Data},
+	journal = {CoRR},
+	volume = {abs/1807.02547},
+	year = {2018},
+	url = {http://arxiv.org/abs/1807.02547},
+	archivePrefix = {arXiv},
+	eprint = {1807.02547},
+	timestamp = {Mon, 13 Aug 2018 16:46:44 +0200},
+	biburl = {https://dblp.org/rec/bib/journals/corr/abs-1807-02547},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Lenc18,
+	author = "Lenc, K. and Vedaldi, A.",
+	title = "Understanding Image Representations by Measuring Their Equivariance and Equivalence",
+	journal = "International Journal of Computer Vision",
+	year = "2018",
+	keywords = "Image representations; Geometric equivariance; Equivalent representations; Convolutional neural networks ",
+	doi = "10.1007/s11263-018-1098-y",
+}
+
+@article{BioCNN18,
+	author = {Derevyanko Georgy and Grudinin Sergei and Bengio Yoshua and Lamoureux Guillaume},
+	title = {Deep convolutional networks for quality assessment of protein folds},
+	journal = {ArXiv e-prints},
+	year = {2018},
+	month = jan
+}
+
+@unpublished{DeepSymmetry18,
+	title = {{DeepSymmetry : Using 3D convolutional networks for identification of tandem repeats and internal symmetries in protein structures}},
+	author = {Pag{\`e}s Guillaume and Grudinin Sergei},
+	url = {https://hal.inria.fr/hal-01903624},
+	note = {working paper or preprint},
+	year = {2018},
+	month = Oct,
+	pdf = {https://hal.inria.fr/hal-01903624/file/deepSymmetryArxiv.pdf},
+	hal_id = {hal-01903624},
+	hal_version = {v1},
+}
+
+@InProceedings{conf/cvpr/WorrallGTB17,
+	title =	"Harmonic Networks: Deep Translation and Rotation
+	Equivariance",
+	author =	"Daniel E. Worrall and Stephan J. Garbin and Daniyar
+	Turmukhambetov and Gabriel J. Brostow",
+	publisher =	"IEEE Computer Society",
+	year = 	"2017",
+	bibdate =	"2017-11-16",
+	bibsource =	"DBLP,
+	http://dblp.uni-trier.de/https://doi.org/10.1109/CVPR.2017.758;
+	DBLP,
+	http://dblp.uni-trier.de/db/conf/cvpr/cvpr2017.html#WorrallGTB17",
+	booktitle =	"CVPR",
+	crossref =	"conf/cvpr/2017",
+	ISBN = 	"978-1-5386-0457-1",
+	pages =	"7168--7177",
+	URL =  	"http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=8097368",
 }
