--- a/Veselova2019Project14/Veselova2019Project14.tex
+++ b/Veselova2019Project14/Veselova2019Project14.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt,twosides]{article}
 \usepackage{jmlda}
 %\NOREVIEWERNOTES
+\renewcommand*{\thefootnote}{\fnsymbol{footnote}}
 
 \title
 [Detection of tandem repeats in proteins]
@@ -17,10 +18,10 @@
 \organization
 {$^1$Московский физико-технический институт (МФТИ)}
 \abstract
-{В работе рассматривается задача регрессионного выделения осей симметрии и классификационного выделения порядков найденных осей. Обе задачи решаются с помощью применения сверточных нейросетей к синтетическому датасету, полученному размножением 3D моделей белковых структур. Кроме того, предлагается перенести методы 2D аугментации на используемые 3D данные. Итоговая модель сравнивается с построенной в TensorFlow готовой моделью, не использующей вращения и трансляции данных. Решение данной задачи позволит увеличить точность обработки и автоматического выделения свойств белков. 
+{В работе рассматривается задача регрессионного выделения осей симметрии трёхмерных объектов и классификационного выделения порядков найденных осей. Обе задачи решаются с помощью применения свёрточных нейросетей к синтетическому датасету, полученному размножением 3D моделей белковых структур. Относительно трансляции данных свёрточные нейросети обладают свойством устойчивости, что не выполняется для вращений. Предлагается применение трёхмерных сферических гармоник вместо классических свёрточных фильтров в CNN. Решение данной задачи позволит увеличить точность обработки и автоматического выделения свойств белков. 
 	
 \bigskip
-\textbf{Ключевые слова}: \emph {CNN}}
+\textbf{Ключевые слова}: \emph {CNN, сферические гармоники, ось симметрии, 3D объект}}
 
 	\titleEng
 	{JMLDA paper example: file jmlda-example.tex}
@@ -40,9 +41,12 @@
 	%\linenumbers
 	
 	\section{Введение}
-
-	\cite[Prev]{journals/corr/BiettiM17}
-
+	Машинное обучение широко применяется в задачах современных естественных наук, в частности в задачах структурной биологии. Большая часть получаемых на практике белков обладает повтояющимися элементами структуры или симметрией, которые влияют на функции белков и позволяют исследовать их эволюцию. Нахождение симметрий и повторов давно является актуальной задачей, решённой с помощью классических методов машинного обучения в 2006 году \cite{MitGuiPau06}, поэтому особый интерес представляет применение методов глубокого обучения и свёрточных нейросетей, которые позволяют получать на нижних уровнях сети легко интерпретируемые характерные черты изучаемых объектов. 
+	
+	Предсказание трёхмерной структуры белка по его аминокислотному составу \cite{BioCNN18} и детектирование тандемных повторов и внутренних симметрий с высокой точностью решается свёрточными нейросетями \cite{DeepSymmetry18}, однако существующие свёрточные нейросети не имеют возможности одинаково качественно обрабатывать входные данные при любых поворотах и сдвигах. Если трансляция входного объекта при обработке свёрточной нейросетью даёт пропорционально транслированную карту характеристик \cite{Lenc18}, то для вращений входного объекта подобное свойство не реализуется. Искомое свойство переноса преобразования входных данных на выходные называется эквивариантностью. Кроме того, сохраняющаяся во всех слоях нейросети эквивариантность позволяет отслеживать свойства исследуемых структур уже на нижних уровнях нейросети. 2D CNN, относительно которой данные были бы эквивариантны, была реализована заменой стандартных свёрточных фильтров на комплексные сферические гармоники, обеспечивающие вращательную эквивариантность без необходимости использовать сильную аугментацию данных \cite{conf/cvpr/WorrallGTB17}. Трёхмерной интерпретацией данного подхода, способной к работе с любым преобразованием из группы симметрий SE(3), стала 3D Steerable CNN, в которой стандартные трёхмерные свёрточные фильтры заменяются линейной комбинацией аналитически определённого вращательного базиса \cite{DBLP:journals/corr/abs-1807-02547}. Более того, в силу одинакового изменения RGB матриц при исследуемых преобразованиях, построенная CNN обрабатывает и цветные изображения, в отличие от предыдущих работ.
+	
+	Проводимое исследование нацелено на эффективную имплементацию полученных результатов в существующуей модели выделения тандемных повторов и симметрий в белках для получения идентичных результатов при любых вращениях исходных карт атомных плотностей белковых 3D моделей \cite{DeepSymmetry18}. В качестве входных данных выступает синтетический датасет, полученный <<симметризацией>> белковых структур из датасета Top8000\footnote{ http://kinemage.biochem.duke.edu/databases/top8000.php}. 
+	 
 	\section{Вывод}
 
 	\bibliographystyle{plain}
