--- a/Veselova2019Project14/Veselova2019Project14.bib
+++ b/Veselova2019Project14/Veselova2019Project14.bib
@@ -1,33 +1,33 @@
 @article{journals/corr/BiettiM17,
-	title =	"Group Invariance and Stability to Deformations of Deep
-	Convolutional Representations",
-	author = "Alberto Bietti and Julien Mairal",
-	journal = "CoRR",
-	year = 	"2017",
-	volume = "abs/1706.03078",
-	bibdate = "2018-08-13",
-	bibsource =	"DBLP,
-	http://dblp.uni-trier.de/db/journals/corr/corr1706.html#BiettiM17",
-	URL = "http://arxiv.org/abs/1706.03078",
+	title =	{{Group Invariance and Stability to Deformations of Deep
+	Convolutional Representations}},
+	author = {Alberto Bietti and Julien Mairal},
+	journal ={CoRR},
+	year = 	{2017},
+	volume = {abs/1706.03078},
+	bibdate = {2018-08-13},
+	bibsource =	{DBLP,
+	http://dblp.uni-trier.de/db/journals/corr/corr1706.html#BiettiM17},
+	URL = {http://arxiv.org/abs/1706.03078},
 }
 
 @article{MitGuiPau06,
-	author = "Mitra and Guibas and Pauly",
-	title =	"Partial and Approximate Symmetry Detection for 3{D}
-	Geometry",
-	journal = "ACMTG: ACM Transactions on Graphics",
-	volume = "25",
-	year = "2006",
+	title =	{{Partial and Approximate Symmetry Detection for 3D
+	Geometry}},
+	author = {Niloy J. Mitra and Leonidas Guibas and Mark Pauly},
+	journal = {ACMTG: ACM Transactions on Graphics},
+	volume = {25},
+	year = {2006},
 }
 
 @article{DBLP:journals/corr/abs-1807-02547,
+	title = {{3D Steerable CNNs: Learning Rotationally Equivariant Features in Volumetric
+	Data}},
 	author = {Maurice Weiler and
 	Mario Geiger and
 	Max Welling and
 	Wouter Boomsma and
 	Taco Cohen},
-	title = {3D Steerable CNNs: Learning Rotationally Equivariant Features in Volumetric
-	Data},
 	journal = {CoRR},
 	volume = {abs/1807.02547},
 	year = {2018},
@@ -40,49 +40,47 @@
 }
 
 @article{Lenc18,
-	author = "Lenc, K. and Vedaldi, A.",
-	title = "Understanding Image Representations by Measuring Their Equivariance and Equivalence",
-	journal = "International Journal of Computer Vision",
-	year = "2018",
-	keywords = "Image representations; Geometric equivariance; Equivalent representations; Convolutional neural networks ",
-	doi = "10.1007/s11263-018-1098-y",
+	title = {{Understanding Image Representations by Measuring Their Equivariance and Equivalence}},
+	author = {Karel Lenc and Andrea Vedaldi},
+	journal = {International Journal of Computer Vision},
+	year = {2018},
+	keywords = {Image representations; Geometric equivariance; Equivalent representations; Convolutional neural networks},
+	doi = {10.1007/s11263-018-1098-y},
 }
 
 @article{BioCNN18,
-	author = {Derevyanko Georgy and Grudinin Sergei and Bengio Yoshua and Lamoureux Guillaume},
-	title = {Deep convolutional networks for quality assessment of protein folds},
+	title = {{Deep convolutional networks for quality assessment of protein folds}},
+	author = {Georgy Derevyanko and Sergei Grudinin and Yoshua Bengio and Guillaume Lamoureux},
 	journal = {ArXiv e-prints},
-	year = {2018},
-	month = jan
+	year = {2018}
 }
 
 @unpublished{DeepSymmetry18,
-	title = {{DeepSymmetry : Using 3D convolutional networks for identification of tandem repeats and internal symmetries in protein structures}},
-	author = {Pag{\`e}s Guillaume and Grudinin Sergei},
+	title = {{DeepSymmetry: Using 3D convolutional networks for identification of tandem repeats and internal symmetries in protein structures}},
+	author = {Guillaume Pag{\`e}s and Sergei Grudinin},
 	url = {https://hal.inria.fr/hal-01903624},
 	note = {working paper or preprint},
 	year = {2018},
-	month = Oct,
 	pdf = {https://hal.inria.fr/hal-01903624/file/deepSymmetryArxiv.pdf},
 	hal_id = {hal-01903624},
 	hal_version = {v1},
 }
 
 @InProceedings{conf/cvpr/WorrallGTB17,
-	title =	"Harmonic Networks: Deep Translation and Rotation
-	Equivariance",
-	author =	"Daniel E. Worrall and Stephan J. Garbin and Daniyar
-	Turmukhambetov and Gabriel J. Brostow",
-	publisher =	"IEEE Computer Society",
-	year = 	"2017",
-	bibdate =	"2017-11-16",
-	bibsource =	"DBLP,
+	title =	{{Harmonic Networks: Deep Translation and Rotation
+	Equivariance}},
+	author = {Daniel E. Worrall and Stephan J. Garbin and Daniyar
+	Turmukhambetov and Gabriel J. Brostow},
+	publisher =	{IEEE Computer Society},
+	year = {2017},
+	bibdate = {2017-11-16},
+	bibsource =	{DBLP,
 	http://dblp.uni-trier.de/https://doi.org/10.1109/CVPR.2017.758;
 	DBLP,
-	http://dblp.uni-trier.de/db/conf/cvpr/cvpr2017.html#WorrallGTB17",
-	booktitle =	"CVPR",
-	crossref =	"conf/cvpr/2017",
-	ISBN = 	"978-1-5386-0457-1",
-	pages =	"7168--7177",
-	URL =  	"http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=8097368",
+	http://dblp.uni-trier.de/db/conf/cvpr/cvpr2017.html#WorrallGTB17},
+	booktitle =	{CVPR},
+	crossref = {conf/cvpr/2017},
+	ISBN = {978-1-5386-0457-1},
+	pages =	{7168--7177},
+	URL = {http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=8097368},
 }
