Improved formulae representation

--- a/Veselova2019Project14/Veselova2019Project14.bib
+++ b/Veselova2019Project14/Veselova2019Project14.bib
@@ -84,3 +84,20 @@
 	pages =	{7168--7177},
 	URL = {http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=8097368},
 }
+
+@Article{journals/cagd/MousaCAG08,
+	title =	{Toward an efficient triangle-based spherical harmonics
+	representation of 3D objects},
+	author = {Mohamed-Hamed Mousa and Rapha{\"e}lle Chaine and Samir
+	Akkouche and Eric Galin},
+	journal = {Computer Aided Geometric Design},
+	year = 	{2008},
+	number = {8},
+	volume = {25},
+	bibdate = {2017-05-20},
+	bibsource =	{DBLP,
+	http://dblp.uni-trier.de/https://doi.org/10.1016/j.cagd.2008.06.004;
+	DBLP,
+	http://dblp.uni-trier.de/db/journals/cagd/cagd25.html#MousaCAG08},
+	pages = {561--575},
+}
