--- a/Veselova2019Project14/Veselova2019Project14.bib
+++ b/Veselova2019Project14/Veselova2019Project14.bib
@@ -101,3 +101,20 @@
 	http://dblp.uni-trier.de/db/journals/cagd/cagd25.html#MousaCAG08},
 	pages = {561--575},
 }
+
+@InProceedings{conf/siggraph/KazhdanF02,
+	title =	{Harmonic 3D shape matching},
+	author = {Michael Kazhdan and Thomas A. Funkhouser},
+	bibdate = {2015-11-26},
+	bibsource =	{DBLP,
+	http://dblp.uni-trier.de/db/conf/siggraph/siggraph2002aa.html#KazhdanF02",
+	booktitle =	"Proceedings of the 29th International Conference on
+	Computer Graphics and Interactive Techniques, SIGGRAPH
+	2002, San Antonio, Texas, USA, July 21-26, 2002,
+	Abstracts and Applications},
+	publisher =	{ACM},
+	year = 	{2002},
+	booktitle =	{SIGGRAPH Abstracts and Applications},
+	pages =	{191},
+	URL = {http://doi.acm.org/10.1145/1242073},
+}
