English version also included

--- a/Veselova2019Project14/Veselova2019Project14.tex
+++ b/Veselova2019Project14/Veselova2019Project14.tex
@@ -21,7 +21,7 @@
 {В работе рассматривается задача регрессионного выделения осей симметрии трёхмерных объектов и классификационного выделения порядков найденных осей. Обе задачи решаются с помощью применения свёрточных нейросетей к синтетическому датасету, полученному размножением 3D моделей белковых структур. Относительно трансляции данных свёрточные нейросети обладают свойством устойчивости, что не выполняется для вращений. Предлагается применение трёхмерных сферических гармоник вместо классических свёрточных фильтров в CNN. Решение данной задачи позволит увеличить точность обработки и автоматического выделения свойств белков. 
 	
 \bigskip
-\textbf{Ключевые слова}: \emph {CNN, сферические гармоники, ось симметрии, 3D объект}}
+\textbf{Ключевые слова}: \emph {CNN, свёрточные нейросети, сферические гармоники, тандемные повторы, 3D объект}.}
 
 	\titleEng
 	{JMLDA paper example: file jmlda-example.tex}
