--- a/Veselova2019Project14/Veselova2019Project14.tex
+++ b/Veselova2019Project14/Veselova2019Project14.tex
@@ -3,6 +3,7 @@
 %\NOREVIEWERNOTES
 \renewcommand*{\thefootnote}{\fnsymbol{footnote}}
 
+
 \title
 [Detection of tandem repeats in proteins]
 {Deep Learning for reliable detection of tandem repeats in 3D protein structures.}
@@ -18,23 +19,11 @@
 \organization
 {$^1$Московский физико-технический институт (МФТИ)}
 \abstract
-{В работе рассматривается задача регрессионного выделения осей симметрии трёхмерных объектов и классификационного выделения порядков найденных осей. Обе задачи решаются с помощью применения свёрточных нейросетей к синтетическому датасету, полученному размножением 3D моделей белковых структур. Относительно трансляции данных свёрточные нейросети обладают свойством устойчивости, что не выполняется для вращений. Предлагается применение трёхмерных сферических гармоник вместо классических свёрточных фильтров в CNN. Решение данной задачи позволит увеличить точность обработки и автоматического выделения свойств белков. 
+{В работе рассматривается улучшение алгоритма выделения осей симметрии и повторяющихся элементов в трёхмерной структуре белка. Общая задача анализа трёхмерных белковых структур с высокой эффективностью решается с помощью свёрточных нейросетей (СNN --- convolutional neural network). Относительно трансляции данных CNN обладают свойством устойчивости, или эквивариантности --- коммутативности преобразования исходных данных и свёртки, однако для вращений данное свойство не сохраняется. Обеспечить эквивариантность всей нейросети предлагается заменой классических свёрточных фильтров на линейную комбинацию трёхмерных сферических гармоник, эквивариантных относительно вращений. Решение данной задачи позволит увеличить точность и скорость обработки белков. 
 	
 \bigskip
-\textbf{Ключевые слова}: \emph {CNN, свёрточные нейросети, сферические гармоники, тандемные повторы, 3D объект}.}
+\textbf{Ключевые слова}: \emph {CNN, свёрточные нейросети, сферические гармоники, структурные повторения, оси симметрии, 3D объект}.}
 
-	\titleEng
-	{JMLDA paper example: file jmlda-example.tex}
-	\authorEng
-	{Author~F.\,S.$^1$, CoAuthor~F.\,S.$^2$, Name~F.\,S.$^2$}
-	\organizationEng
-	{$^1$Organization; $^2$Organization}
-	\abstractEng
-	{This document is an example of paper prepared with \LaTeXe\
-	typesetting system and style file \texttt{jmlda.sty}.
-	
-	\bigskip
-	\textbf{Keywords}: \emph{keyword, keyword, more keywords}.}
 
 \begin{document}
 	\maketitle
@@ -43,7 +32,7 @@
 	\section{Введение}
 	Машинное обучение широко применяется в задачах современных естественных наук, в частности в задачах структурной биологии. Большая часть получаемых на практике белков обладает повтояющимися элементами структуры или симметрией, которые влияют на функции белков и позволяют исследовать их эволюцию. Нахождение симметрий и повторов является важной задачей, решённой с помощью классических методов машинного обучения в 2006 году \cite{MitGuiPau06}, поэтому особый интерес представляет применение методов глубокого обучения и свёрточных нейросетей (CNN --- convolutional neural network), которые позволяют получать на нижних уровнях сети легко интерпретируемые характерные черты изучаемых объектов. 
 	
-	Предсказание трёхмерной структуры белка по его аминокислотному составу \cite{BioCNN18} и детектирование тандемных повторов и внутренних симметрий с высокой точностью решается свёрточными нейросетями \cite{DeepSymmetry18}, однако существующие свёрточные нейросети не имеют возможности одинаково качественно обрабатывать входные данные при любых поворотах и сдвигах. Основная цель работы состоит в адаптации построенных нейросетей для выявления повторов и симметрий к различным преобразованиям входных данных. 
+	Предсказание трёхмерной структуры белка по его аминокислотному составу \cite{BioCNN18} и детектирование структурных повторений и внутренних симметрий с высокой точностью решается свёрточными нейросетями \cite{DeepSymmetry18}, однако существующие свёрточные нейросети не имеют возможности одинаково качественно обрабатывать входные данные при любых поворотах и сдвигах. Основная цель работы состоит в адаптации построенных нейросетей для выявления повторов и симметрий к различным преобразованиям входных данных. 
 	
 	Если трансляция входного объекта при обработке свёрточной нейросетью даёт пропорционально транслированную карту характеристик \cite{Lenc18}, то для вращений входного объекта подобное свойство не реализуется. Искомое свойство переноса преобразования входных данных на выходные называется эквивариантностью. Кроме того, сохраняющаяся во всех слоях нейросети эквивариантность позволяет отслеживать свойства исследуемых структур уже на нижних уровнях нейросети. 2D CNN, относительно которой данные были бы эквивариантны, была реализована заменой стандартных свёрточных фильтров на комплексные круговые гармоники (circular harmonics), обеспечивающие вращательную эквивариантность без необходимости использовать сильную аугментацию данных \cite{conf/cvpr/WorrallGTB17}. Трёхмерной интерпретацией данного подхода являются сферические гармоники. Первоначально идея сферических гармоник была развита в моделировании для эффективного представления и определения степени схожести поверхностей трёхмерных объектов\cite{conf/siggraph/KazhdanF02, journals/cagd/MousaCAG08}. Далее идея была применена к анализу трёхмерных признаковых карт с помощью CNN. При замене стандартных трёхмерных свёрточных фильтров на линейную комбинацию аналитически определённого вращательного базиса из сферических гармоник CNN становится эквивариантна относительно любого преобразования из группы симметрий $SE(3)$\cite{DBLP:journals/corr/abs-1807-02547}.
 	
