--- a/Veselova2019Project14/Veselova2019Project14.tex
+++ b/Veselova2019Project14/Veselova2019Project14.tex
@@ -19,7 +19,7 @@
 \organization
 {$^1$Московский физико-технический институт (МФТИ)}
 \abstract
-{В работе рассматривается улучшение алгоритма выделения осей симметрии и повторяющихся элементов в трёхмерной структуре белка. Общая задача анализа трёхмерных белковых структур с высокой эффективностью решается с помощью свёрточных нейросетей (СNN --- convolutional neural network). Относительно трансляции данных CNN обладают свойством устойчивости, или эквивариантности --- коммутативности преобразования исходных данных и свёртки, однако для вращений данное свойство не сохраняется. Обеспечить эквивариантность всей нейросети предлагается заменой классических свёрточных фильтров на линейную комбинацию трёхмерных сферических гармоник, эквивариантных относительно вращений. Решение данной задачи позволит увеличить точность и скорость обработки белков. 
+{В работе рассматривается улучшение алгоритма выделения осей симметрии и повторяющихся элементов в трёхмерной структуре белка. Общая задача анализа трёхмерных белковых структур с высокой эффективностью решается с помощью свёрточных нейросетей (СNN --- convolutional neural network). Относительно трансляции данных CNN обладают свойством устойчивости, или \textit{эквивариантности} --- коммутативности преобразования исходных данных и свёртки, однако для вращений данное свойство не сохраняется. Обеспечить эквивариантность всей нейросети предлагается заменой классических свёрточных фильтров на линейную комбинацию трёхмерных сферических гармоник, эквивариантных относительно вращений. Решение данной задачи позволит увеличить точность и скорость обработки белков. 
 	
 \bigskip
 \textbf{Ключевые слова}: \emph {CNN, свёрточные нейросети, сферические гармоники, структурные повторения, оси симметрии, 3D объект}.}
@@ -34,13 +34,27 @@
 	
 	Предсказание трёхмерной структуры белка по его аминокислотному составу \cite{BioCNN18} и детектирование структурных повторений и внутренних симметрий с высокой точностью решается свёрточными нейросетями \cite{DeepSymmetry18}, однако существующие свёрточные нейросети не имеют возможности одинаково качественно обрабатывать входные данные при любых поворотах и сдвигах. Основная цель работы состоит в адаптации построенных нейросетей для выявления повторов и симметрий к различным преобразованиям входных данных. 
 	
-	Если трансляция входного объекта при обработке свёрточной нейросетью даёт пропорционально транслированную карту характеристик \cite{Lenc18}, то для вращений входного объекта подобное свойство не реализуется. Искомое свойство переноса преобразования входных данных на выходные называется эквивариантностью. Кроме того, сохраняющаяся во всех слоях нейросети эквивариантность позволяет отслеживать свойства исследуемых структур уже на нижних уровнях нейросети. 2D CNN, относительно которой данные были бы эквивариантны, была реализована заменой стандартных свёрточных фильтров на комплексные круговые гармоники (circular harmonics), обеспечивающие вращательную эквивариантность без необходимости использовать сильную аугментацию данных \cite{conf/cvpr/WorrallGTB17}. Трёхмерной интерпретацией данного подхода являются сферические гармоники. Первоначально идея сферических гармоник была развита в моделировании для эффективного представления и определения степени схожести поверхностей трёхмерных объектов\cite{conf/siggraph/KazhdanF02, journals/cagd/MousaCAG08}. Далее идея была применена к анализу трёхмерных признаковых карт с помощью CNN. При замене стандартных трёхмерных свёрточных фильтров на линейную комбинацию аналитически определённого вращательного базиса из сферических гармоник CNN становится эквивариантна относительно любого преобразования из группы симметрий $SE(3)$\cite{DBLP:journals/corr/abs-1807-02547}.
+	Если трансляция входного объекта при обработке свёрточной нейросетью даёт пропорционально транслированную карту характеристик \cite{Lenc18}, то для вращений входного объекта подобное свойство не реализуется. Искомое свойство переноса преобразования входных данных на выходные называется эквивариантностью. Кроме того, сохраняющаяся во всех слоях нейросети эквивариантность позволяет отслеживать свойства исследуемых структур уже на нижних уровнях нейросети. 2D CNN, относительно которой данные были бы эквивариантны, была реализована заменой стандартных свёрточных фильтров на комплексные \textit{круговые гармоники} (circular harmonics), обеспечивающие вращательную эквивариантность без необходимости использовать сильную аугментацию данных \cite{conf/cvpr/WorrallGTB17}. Трёхмерной интерпретацией данного подхода являются сферические гармоники. Первоначально идея сферических гармоник была развита в моделировании для эффективного представления и определения степени схожести поверхностей трёхмерных объектов\cite{conf/siggraph/KazhdanF02, journals/cagd/MousaCAG08}. Далее идея была применена к анализу трёхмерных признаковых карт с помощью CNN. При замене стандартных трёхмерных свёрточных фильтров на линейную комбинацию аналитически определённого вращательного базиса из \textit{сферических гармоник} CNN становится эквивариантна относительно любого преобразования из группы симметрий $SE(3)$\cite{DBLP:journals/corr/abs-1807-02547}.
 	
 	Любое движение $g\in SE(3)$ представимо как комбинация вращения $r\in SO(3)$ и трансляции $t\in\mathbb{R}^3$. При рассмотрении одного уровня свёрточной нейросети с $K$ трёхмерных признаковых карт, соответствие между входом и выходом слоя может быть записано как $f:\mathbb{R}^3\rightarrow\mathbb{R}^K$. Оператор трансляции выходного векторного поля легко описывается как $t:(x-t)\mapsto x$. Вращение описывается более сложным образом, так как при повороте всей каждый вектор меняет свою позицию и поворачивается с помощью матрицы $\rho(r)$. Поэтому оператор вращения $\pi(r)$ определяется как $[\pi(r)f](x):=\rho(r)f(r^{-1}x)$, где $r^{-1}x$ описывает перемещение векторов на новые позиции. Таким образом, $g=tr$ представимо как $[\pi(tr)f](x):=\rho(r)f(r^{-1}(x-t))$. Обобщая полученные выкладки на CNN, выражение свёрточного фильтра между $n$ и $n+1$ слоями нейросети через базис в пространстве эквивариантных преобразований между пространствами признаков $\mathcal{F}_n$ и $\mathcal{F}_{n+1}$ позволяет гарантировать, что любое преобразование входа слоя будет давать такое же преобразование выхода, т.е. обеспечивать эквивариантность. Кроме того, в силу одинакового изменения всех трёх RGB матриц изображения при рассматриваемых преобразованиях полученное представление может быть перенесено и на цветные изображения.
 	
-	 Именно поэтому в качестве решения поставленной задачи в статье предложена эффективная имплементация сферических гармоник в существующую CNN модель выделения тандемных повторов и симметрий в белках для получения идентичных результатов при любых вращениях исходных карт атомных плотностей белковых 3D моделей \cite{DeepSymmetry18}. В качестве входных данных выступает синтетический датасет, полученный <<симметризацией>> белковых структур датасета Top8000\footnote{ http://kinemage.biochem.duke.edu/databases/top8000.php}, состоящий из карт плотностей размеров $24\times24\times24$. 
+	Именно поэтому в качестве решения поставленной задачи в статье предложена эффективная имплементация сферических гармоник в существующую CNN модель выделения тандемных повторов и симметрий в белках для получения идентичных результатов при любых вращениях исходных карт атомных плотностей белковых 3D моделей \cite{DeepSymmetry18}. В качестве входных данных выступает синтетический датасет, полученный <<симметризацией>> белковых структур датасета Top8000\footnote{ http://kinemage.biochem.duke.edu/databases/top8000.php}, состоящий из карт плотностей размеров $24\times24\times24$. 
 	 
-	\section{Вывод}
+	\section{Постановка задачи}
+	Данными в задаче являются $K=11$ карт атомных плотностей элементов белка. Каждая карта $\mathbf{x}_i\in\mathbb{R}^{24\times24\times24}$ обучающей выборки $\mathbf{X}$ получена искусственной симметризацией карт датасета Top8000 с порядком циклической симметрии от $1$ до $N_{order}\in[10,20]$.
+	Ответом на элементе выборки $\mathbf{f}(x_i)=\mathbf{f}_i\in\mathbb{R}^{N_{order}+6}$ является композиция двух векторов $\mathbf{y}_i\in\mathbb{R}^{N_{order}}$ и $\mathbf{z}_i\in\mathbb{R}^6$, где $\mathbf{y}_i$  определяет вероятность каждого порядка симметрии, $\mathbf{z}_i$ определяет положение оси симметрии. Размерность 6 для задания оси симметрии выбрана неслучайно: модель переводит ось в трёхмерном пространстве в её представление в шестимерном пространстве посредством \textit{отображения Веронезе} $V(x,y,z)=(x^2,y^2,z^2,\sqrt2yz,\sqrt2zx,\sqrt2xy)$. 
+	 
+	Исходная модель $\mathbf{f(X)}$ --- свёрточная нейросеть, состоящая из двух свёрточных слоёв, имеющих по 4 фильтра каждый, и трёх полносвязных слоёв, входом для которых является конкатенация столбцов выхода второго свёрточного слоя. Зададим $\mathbf{W}\in\mathbb{R}^{n\times4\times2}$ --- матрицу коэффициентов разложения каждого из 4 фильтров двух свёрточных слоёв нейросети на $n$ базисных сферических гармоник. Требуется адаптировать модель $\mathbf{f(X, W)}$ так, что при воздействии на исходные данные любым оператором $\pi(tr)$ трансляции $t$ и вращения $r$ реализуется свойство эквивариантности, т.е.
+	$$\mathbf{f}(\pi(tr)\mathbf{X,W)}=[\pi(tr)\mathbf{f}]\mathbf{(X,W)}.$$
+	
+	Функция потерь при определении порядка симметрии объекта $\mathbf{x}_i$ при известном истинном порядке $k_{t}$ с помощью вероятности каждого порядка   $P(k)=\frac{\exp(p_k)}{\sum_{j=1}^{N_{order}}\exp(p_j)}$ для вектора $\mathbf{y}_i=[p_1,\dots,p_{N_{order}}]\T$ может быть записана как
+	$$L_c(\mathbf{W})=-\log(P(k_{t}))=\log\Bigg(\sum_{j=1}^{N_{order}}\exp(p_j)\Bigg)-p_{k_{t}}.$$
+	Функция потерь при определении оси симметрии объекта $\mathbf{x}_i$ по известным координатам одной из точек $(x_{t},y_{t},z_{t})$ истинной оси симметрии для вектора $\mathbf{z}_i$ может быть записана как
+	$$L_a(\mathbf{W})=\|\mathbf{z}_i-V(x_{t},y_{t},z_{t})\|_2.$$
+	
+	Получаем решаемую в процессе обучения задачу оптимизации
+	$$\mathbf{W}^*=\argmin_{\textbf{W}}\big(L_c(\mathbf{W})+L_a(\mathbf{W})\big)$$
+
 
 	\bibliographystyle{plain}
 	\bibliography{Veselova2019Project14}
