--- a/Veselova2019Project14/Veselova2019Project14.bib
+++ b/Veselova2019Project14/Veselova2019Project14.bib
@@ -85,9 +85,9 @@
 	URL = {http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=8097368},
 }
 
-@Article{journals/cagd/MousaCAG08,
-	title =	{Toward an efficient triangle-based spherical harmonics
-	representation of 3D objects},
+@article{journals/cagd/MousaCAG08,
+	title =	{{Toward an efficient triangle-based spherical harmonics
+	representation of 3D objects}},
 	author = {Mohamed-Hamed Mousa and Rapha{\"e}lle Chaine and Samir
 	Akkouche and Eric Galin},
 	journal = {Computer Aided Geometric Design},
@@ -117,4 +117,20 @@
 	booktitle =	{SIGGRAPH Abstracts and Applications},
 	pages =	{191},
 	URL = {http://doi.acm.org/10.1145/1242073},
+}
+
+@article{DBLP:journals/corr/abs-1711-07289,
+	title = {{Learning Steerable Filters for Rotation Equivariant CNNs}},
+	author = {Maurice Weiler and
+	Fred A. Hamprecht and
+	Martin Storath},
+	journal = {CoRR},
+	volume = {abs/1711.07289},
+	year = {2017},
+	url = {http://arxiv.org/abs/1711.07289},
+	archivePrefix = {arXiv},
+	eprint = {1711.07289},
+	timestamp = {Mon, 13 Aug 2018 16:47:24 +0200},
+	biburl = {https://dblp.org/rec/bib/journals/corr/abs-1711-07289},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
