--- a/CNNExperiments.ipynb
+++ b/CNNExperiments.ipynb
@@ -10473,7 +10473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10484,18 +10484,201 @@
     "import torch.nn.functional as F\n",
     "\n",
     "from se3cnn import SE3Convolution, SE3Dropout\n",
-    "from se3cnn.blocks import GatedBlock"
+    "from se3cnn.blocks import GatedBlock\n",
+    "from se3cnn.non_linearities import ScalarActivation\n",
+    "from se3cnn.dropout import SE3Dropout\n",
+    "from se3cnn import kernel\n",
+    "from se3cnn.filter import low_pass_filter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PoolGatedBlock(torch.nn.Module):\n",
+    "    def __init__(self,\n",
+    "                 repr_in, repr_out, size, radial_window=kernel.gaussian_window_wrapper,  # kernel params\n",
+    "                 activation=(None, None), pool_size=0, pool_stride=0, stride=1, padding=0, dilation=1, capsule_dropout_p=None,  # conv/nonlinearity/dropout params\n",
+    "                 normalization=None, batch_norm_momentum=0.1,  # batch norm params\n",
+    "                 bias=True, smooth_stride=True, dyn_iso=False, checkpoint=True, verbose=False, transpose=False):\n",
+    "        '''\n",
+    "        :param repr_in: tuple with multiplicities of repr. (1, 3, 5, ..., 15)\n",
+    "        :param repr_out: same but for the output\n",
+    "        :param int size: the filters are cubes of dimension = size x size x size\n",
+    "        :param radial_window: radial window function\n",
+    "        :param activation: (scalar activation, gate activation) which are functions like torch.nn.functional.relu or None\n",
+    "        :param int pool_size: size of torch.nn.AvgPool3d\n",
+    "        :param int pool_stride: stride of torch.nn.AvgPool3d\n",
+    "        :param int stride: stride of the convolution (for torch.nn.functional.conv3d)\n",
+    "        :param int padding: padding of the convolution (for torch.nn.functional.conv3d)\n",
+    "        :param int dilation: dilation of the convolution (for torch.nn.functional.conv3d)\n",
+    "        :param float capsule_dropout_p: dropout probability\n",
+    "        :param str normalization: \"batch\", \"group\", \"instance\" or None\n",
+    "        :param float batch_norm_momentum: batch normalization momentum (ignored if no batch normalization)\n",
+    "        :param bool bias: bias for the gates and scalar fields\n",
+    "        :param bool smooth_stride: apply a low pass filter before the stride\n",
+    "        :param bool dyn_iso: initialize with some sort of Dynamical Isometry (inspired by Algo. 2 in https://arxiv.org/abs/1806.05393)\n",
+    "        '''\n",
+    "        super().__init__()\n",
+    "\n",
+    "        if type(activation) is tuple:\n",
+    "            scalar_activation, gate_activation = activation\n",
+    "        else:\n",
+    "            scalar_activation, gate_activation = activation, activation\n",
+    "\n",
+    "        self.repr_out = repr_out\n",
+    "\n",
+    "        Rs_in = [(m, l) for l, m in enumerate(repr_in)]\n",
+    "        Rs_out_with_gate = [(m, l) for l, m in enumerate(repr_out)]\n",
+    "\n",
+    "        if (scalar_activation is not None and repr_out[0] > 0):\n",
+    "            self.scalar_act = ScalarActivation([(repr_out[0], scalar_activation)], bias=bias)\n",
+    "        else:\n",
+    "            self.scalar_act = None\n",
+    "\n",
+    "        n_non_scalar = sum(repr_out[1:])\n",
+    "        if gate_activation is not None and n_non_scalar > 0:\n",
+    "            Rs_out_with_gate.append((n_non_scalar, 0))  # concatenate scalar gate capsules after normal capsules\n",
+    "            self.gate_act = ScalarActivation([(n_non_scalar, gate_activation)], bias=bias)\n",
+    "        else:\n",
+    "            self.gate_act = None\n",
+    "            \n",
+    "        if pool_size > 0:\n",
+    "            self.pool = torch.nn.AvgPool3d(kernel_size=pool_size, stride=pool_stride)\n",
+    "\n",
+    "        if normalization == None:\n",
+    "            Convolution = SE3Convolution\n",
+    "        elif normalization == \"batch\":\n",
+    "            Convolution = partial(SE3BNConvolution, momentum=batch_norm_momentum)\n",
+    "        elif normalization == \"batch_max\":\n",
+    "            Convolution = partial(SE3BNConvolution, reduce='max', momentum=batch_norm_momentum)\n",
+    "        elif normalization == \"group\":\n",
+    "            Convolution = SE3GNConvolution\n",
+    "        elif normalization == \"instance\":\n",
+    "            Convolution = partial(SE3GNConvolution, Rs_gn=[(1, 2 * n + 1) for n, mul in enumerate(repr_in) for _ in range(mul)])\n",
+    "        else:\n",
+    "            raise NotImplementedError('normalization mode unknown')\n",
+    "\n",
+    "        if transpose == True:\n",
+    "            Convolution = SE3ConvolutionTranspose\n",
+    "\n",
+    "        self.conv = Convolution(\n",
+    "            Rs_in=Rs_in,\n",
+    "            Rs_out=Rs_out_with_gate,\n",
+    "            size=size,\n",
+    "            radial_window=radial_window,\n",
+    "            stride=1 if smooth_stride else stride,\n",
+    "            padding=padding,\n",
+    "            dilation=dilation,\n",
+    "            dyn_iso=dyn_iso,\n",
+    "            verbose=verbose,\n",
+    "        )\n",
+    "\n",
+    "        self.stride = stride if smooth_stride else 1\n",
+    "\n",
+    "        self.dropout = None\n",
+    "        if capsule_dropout_p is not None:\n",
+    "            Rs_out_without_gate = [(mul, 2 * n + 1) for n, mul in enumerate(repr_out)]  # Rs_out without gates\n",
+    "            self.dropout = SE3Dropout(Rs_out_without_gate, capsule_dropout_p)\n",
+    "\n",
+    "        self.checkpoint = checkpoint\n",
+    "\n",
+    "\n",
+    "    def forward(self, x):  # pylint: disable=W\n",
+    "\n",
+    "        def gate(y):\n",
+    "            nbatch = y.size(0)\n",
+    "            nx = y.size(2)\n",
+    "            ny = y.size(3)\n",
+    "            nz = y.size(4)\n",
+    "\n",
+    "            size_out = sum(mul * (2 * n + 1) for n, mul in enumerate(self.repr_out))\n",
+    "\n",
+    "            if self.gate_act is not None:\n",
+    "                g = y[:, size_out:]\n",
+    "                g = self.gate_act(g)\n",
+    "                begin_g = 0  # index of first scalar gate capsule\n",
+    "\n",
+    "            z = y.new_empty((y.size(0), size_out, y.size(2), y.size(3), y.size(4)))\n",
+    "            begin_y = 0  # index of first capsule\n",
+    "\n",
+    "            for n, mul in enumerate(self.repr_out):\n",
+    "                if mul == 0:\n",
+    "                    continue\n",
+    "                dim = 2 * n + 1\n",
+    "\n",
+    "                # crop out capsules of order n\n",
+    "                field_y = y[:, begin_y: begin_y + mul * dim]  # [batch, feature * repr, x, y, z]\n",
+    "\n",
+    "                if n == 0:\n",
+    "                    # Scalar activation\n",
+    "                    if self.scalar_act is not None:\n",
+    "                        field = self.scalar_act(field_y)\n",
+    "                    else:\n",
+    "                        field = field_y\n",
+    "                else:\n",
+    "                    if self.gate_act is not None:\n",
+    "                        # reshape channels in capsules and capsule entries\n",
+    "                        field_y = field_y.contiguous()\n",
+    "                        field_y = field_y.view(nbatch, mul, dim, nx, ny, nz)  # [batch, feature, repr, x, y, z]\n",
+    "\n",
+    "                        # crop out corresponding scalar gates\n",
+    "                        field_g = g[:, begin_g: begin_g + mul]  # [batch, feature, x, y, z]\n",
+    "                        begin_g += mul\n",
+    "                        # reshape channels for broadcasting\n",
+    "                        field_g = field_g.contiguous()\n",
+    "                        field_g = field_g.view(nbatch, mul, 1, nx, ny, nz)  # [batch, feature, repr, x, y, z]\n",
+    "\n",
+    "                        # scale non-scalar capsules by gate values\n",
+    "                        field = field_y * field_g  # [batch, feature, repr, x, y, z]\n",
+    "                        field = field.view(nbatch, mul * dim, nx, ny, nz)  # [batch, feature * repr, x, y, z]\n",
+    "                        del field_g\n",
+    "                    else:\n",
+    "                        field = field_y\n",
+    "                del field_y\n",
+    "\n",
+    "                z[:, begin_y: begin_y + mul * dim] = field\n",
+    "                begin_y += mul * dim\n",
+    "                del field\n",
+    "\n",
+    "            return z\n",
+    "\n",
+    "\n",
+    "        # convolution\n",
+    "        z = self.conv(x)\n",
+    "                          \n",
+    "        # pool\n",
+    "        if self.ppol is not None:\n",
+    "            z = self.pool(z)\n",
+    "\n",
+    "        # gate\n",
+    "        if self.scalar_act is not None or self.gate_act is not None:\n",
+    "            z = torch.utils.checkpoint.checkpoint(gate, z) if self.checkpoint else gate(z)\n",
+    "\n",
+    "        # stride\n",
+    "        if self.stride > 1:\n",
+    "            z = low_pass_filter(z, self.stride, self.stride)\n",
+    "\n",
+    "        # dropout\n",
+    "        if self.dropout is not None:\n",
+    "            z = self.dropout(z)\n",
+    "\n",
+    "        return z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "torch.Size([2, 1, 16, 16, 16])\n",
+      "torch.Size([2, 1, 16, 16, 16])\n",
       "True\n",
       "True\n"
      ]
@@ -10518,7 +10701,9 @@
     "    return rotate(rotate(rotate(t)))\n",
     "\n",
     "inp = torch.randn(2, 1, 16, 16, 16)\n",
+    "print(inp.size())\n",
     "inp_r = rotate(inp)\n",
+    "print(inp_r.size())\n",
     "\n",
     "diff_inp = (inp - unrotate(inp_r)).abs().max().item()\n",
     "print(diff_inp < 1e-10) # sanity check\n",
@@ -10528,6 +10713,133 @@
     "\n",
     "diff_out = (out - unrotate(out_r)).abs().max().item()\n",
     "print(diff_out < 1e-10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conv = SE3Convolution([(1, 0)], [(1, 2)], size=4)\n",
+    "x = torch.randn(1, 1, 4, 4, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[[[ 0.0787]]],\n",
+       "\n",
+       "\n",
+       "         [[[ 0.2114]]],\n",
+       "\n",
+       "\n",
+       "         [[[-0.1589]]],\n",
+       "\n",
+       "\n",
+       "         [[[-0.0251]]],\n",
+       "\n",
+       "\n",
+       "         [[[-0.2705]]]]], grad_fn=<ThnnConv3DBackward>)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conv(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(1,),\n",
+    "            (4, 4, 4, 1),\n",
+    "    as inp, outp for SE3NN\n",
+    "    \n",
+    "bias = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EquiNet(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Net, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(1, 20, 5, 1)\n",
+    "        self.conv2 = nn.Conv2d(20, 50, 5, 1)\n",
+    "        self.fc1 = nn.Linear(4*4*50, 500)\n",
+    "        self.fc2 = nn.Linear(500, 10)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = F.relu(self.conv1(x))\n",
+    "        x = F.max_pool2d(x, 2, 2)\n",
+    "        x = F.relu(self.conv2(x))\n",
+    "        x = F.max_pool2d(x, 2, 2)\n",
+    "        x = x.view(-1, 4*4*50)\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = self.fc2(x)\n",
+    "        return F.log_softmax(x, dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SE3Convolution([(1, 0)], [(1, 2)], size=4)\n",
+    "'activation': (F.relu, torch.sigmoid),\n",
+    "    n_non_scalar = sum(repr_out[1:])\n",
+    "ScalarActivation([(n_non_scalar, F.relu)], bias=bias)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "repr_in = [(1,0)]\n",
+    "repr_out = [(1,0), (1,2)]\n",
+    "size = 4\n",
+    "activation = (F.relu, F.relu)\n",
+    "pool_size = 2\n",
+    "pool_stride = 2\n",
+    "bias = True\n",
+    "n_input_1 = 512\n",
+    "n_output_1 = 256\n",
+    "n_output_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GatedBlock(repr_in, repr_out, size, activation=activation, pool_size=pool_size, pool_stride=pool_stride, bias=bias)\n",
+    "nn.Linear(n_input_1, n_output_1)\n",
+    "F.relu()\n",
+    "nn.Dropout(p=args.p_drop_fully, inplace=True)\n",
+    "nn.Linear(n_output_1, n_output_2)\n",
+    "F.relu()\n",
+    "nn.Dropout()\n",
+    "softmax"
    ]
   },
   {
