--- a/Veselova2019Project14/Veselova2019Project14.bib
+++ b/Veselova2019Project14/Veselova2019Project14.bib
@@ -21,8 +21,7 @@
 }
 
 @article{DBLP:journals/corr/abs-1807-02547,
-	title = {{3D Steerable CNNs: Learning Rotationally Equivariant Features in Volumetric
-	Data}},
+	title = {{3D Steerable CNNs: Learning Rotationally Equivariant Features in Volumetric Data}},
 	author = {Maurice Weiler and
 	Mario Geiger and
 	Max Welling and
