--- a/Veselova2019Project14/Veselova2019Project14.tex
+++ b/Veselova2019Project14/Veselova2019Project14.tex
@@ -56,6 +56,24 @@
 	
 	Получаем решаемую в процессе обучения задачу оптимизации
 	$$\mathbf{W}^*=\argmin_{\textbf{W}}\big(L_c(\mathbf{W})+L_a(\mathbf{W})\big)$$
+	
+	\section{Базовый эксперимент}
+	С целью проверки работоспособности предложенной идеи был проведён базовый эксперимент, в ходе которого была реализована структура базовой нейросети из работы \cite{DeepSymmetry18} с применением свёрточных слоёв из модуля se3cnn \cite{DBLP:journals/corr/abs-1807-02547}. Базовая архитектура была переработана с учётом требований модуля и необходимого порядка сферических гармоник. Согласно эмпирическим данным, достаточно второго--третьего порядков сферических для появления эквивариантности в структуре, поэтому свёрточный фильтр в конволюционном слое представляет из себя комбинацию трёх наборов сферических функций порядков 0, 1 и 2 с двумя наборами коэффициентов разложения для каждого из наборов. Таким образом, выход конволюционного слоя имеет $2*\big((2*0+1)+(2*1+1)+(2*2+1)\big)=18$ карт. 
+	Синтетические данные для обучения тестовой сети представляют из себя 400 симметричных с порядком 3 относительно любой из главных диагоналей матриц. Выходом для тестовой сети является заданная тремя координатами ось симметрии.
+	
+	
+	\begin{tabular}{c|c|c|c|c}
+		Layer & Type & Input dimensions & Output dimensions & Parameters\\
+		\hline
+		1 & SE3Convolution & $24\times24\times24\times1$ & $21\times21\times21\times18$ &  Size 4, stride 1\\
+		2 & Average pooling & $21\times21\times21\times18$ & $8\times8\times8\times7$ &  Size 2, stride 2\\
+		\hline
+		5 & Reshape & $8\times8\times8\times7$ & 1512 & \\
+		6 & Linear &  1512 & 800 & \\
+		7 & LeakyReLU &  800 & 800 & \\
+		8 & Linear &  800 & 3 & \\
+	\end{tabular}
+	
 
 
 	\bibliographystyle{plain}
