--- a/ResEquiNet.ipynb
+++ b/ResEquiNet.ipynb
@@ -334,30 +334,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[0., 1., 0.],\n",
+       "tensor([[[1., 1., 1.],\n",
+       "         [1., 1., 1.],\n",
+       "         [0., 1., 0.],\n",
        "         [0., 1., 0.],\n",
        "         [1., 1., 1.],\n",
        "         [1., 1., 1.]],\n",
        "\n",
-       "        [[0., 1., 0.],\n",
+       "        [[1., 1., 1.],\n",
+       "         [1., 1., 1.],\n",
+       "         [0., 1., 0.],\n",
        "         [0., 1., 0.],\n",
        "         [1., 1., 1.],\n",
        "         [1., 1., 1.]]])"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.cat([c.expand(2,2,3), torch.ones(2,2,3)], 1)"
+    "torch.cat([torch.ones(2,2,3), c.expand(2,2,3), torch.ones(2,2,3)], 1)"
    ]
   },
   {
