Latest NN with results from 80 epochs

--- a/ResEquiNet.ipynb
+++ b/ResEquiNet.ipynb
@@ -6,10 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import numpy as np\n",
     "import sys\n",
     "sys.path.append('..')\n",
+    "sys.path.append('../..')\n",
+    "\n",
+    "import torch\n",
+    "import numpy as np\n",
     "from deepSymmetry.src import load_data\n",
     "\n",
     "import torch.nn as nn\n",
@@ -36,14 +38,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting ../deepSymmetry/data/fromScripts/dataReady0\n",
-      "Extracting ../deepSymmetry/data/fromScripts/dataReady0_label\n",
+      "Extracting Data/dataReady0\n",
+      "Extracting Data/dataReady0_label\n",
       "(39785, 13824)\n"
      ]
     }
    ],
    "source": [
-    "train_name = '../deepSymmetry/data/fromScripts/dataReady0'\n",
+    "train_name = 'Data/dataReady0'\n",
     "train_set = load_data.read_data_set(train_name, dtype=dtypes.float16, seed = 1)"
    ]
   },
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,15 +99,19 @@
     "        self.lin2 = nn.Linear(n_output_1, n_output_2)\n",
     "        self.drop2 = nn.Dropout(prob)\n",
     "        self.lin3 = nn.Linear(n_output_2, NUM_CLASSES+6)\n",
+    "        \n",
+    "        self.best_loss = None\n",
     "\n",
     "    def forward(self, x):\n",
     "        prev_layer = x.expand(100,72,24,24,24).clone()\n",
     "        x = self.pool1(self.conv1(x))\n",
+    "        '''\n",
     "        x = torch.cat([torch.zeros(100,72,7,10,10), x, torch.zeros(100,72,7,10,10)], 2)\n",
     "        x = torch.cat([torch.zeros(100,72,24,7,10), x, torch.zeros(100,72,24,7,10)], 3)\n",
     "        x = torch.cat([torch.zeros(100,72,24,24,7), x, torch.zeros(100,72,24,24,7)], 4)\n",
     "        x = torch.add(x, prev_layer).clone()\n",
     "        x = self.pool2(self.conv2(prev_layer))\n",
+    "        '''\n",
     "        \n",
     "        x = x.view(batch_size,-1) \n",
     "        x = F.leaky_relu(self.lin1(x))\n",
@@ -114,12 +120,13 @@
     "        x = self.drop2(x)\n",
     "        return self.lin3(x)\n",
     "    \n",
-    "def train(model, device, train_set, batch_size, optimizer, epoch, per_epoch, decr_rate):\n",
+    "def train(model, device, train_set, batch_size, optimizer, epoch, per_epoch, decr_rate, log_name):\n",
     "    model.train()\n",
     "    flag = True\n",
     "    new_epoch = True\n",
     "    \n",
     "    if new_epoch:\n",
+    "        full_loss = 0\n",
     "        batch_idx = 1\n",
     "        new_epoch = False\n",
     "        data, target, _ = train_set.next_batch(batch_size)\n",
@@ -146,6 +153,7 @@
     "        optimizer.step()\n",
     "        \n",
     "    while (train_set._index_in_epoch + batch_size) < train_set._num_examples:\n",
+    "        full_loss += loss.item()\n",
     "        batch_idx += 1\n",
     "        data, target, _ = train_set.next_batch(batch_size)\n",
     "        data = torch.from_numpy(data.reshape(batch_size,1,24,24,24)).type(torch.FloatTensor)\n",
@@ -173,6 +181,20 @@
     "            print('Train Epoch: {} [{}/{} ({:.0f}%)]\\tLoss: {:.6f}'.format(\n",
     "                epoch, batch_idx * batch_size, train_set._num_examples,\n",
     "                100. * batch_idx / train_set._num_examples, loss.item()))\n",
+    "            with open(log_name, 'a') as file:\n",
+    "                file.write('Train Epoch: {} [{}/{} ({:.0f}%)]\\tLoss: {:.6f}\\n'.format(\n",
+    "                    epoch, batch_idx * batch_size, train_set._num_examples,\n",
+    "                    100. * batch_idx / train_set._num_examples, loss.item()))\n",
+    "    \n",
+    "    if model.best_loss is None:\n",
+    "        model.best_loss = full_loss\n",
+    "    \n",
+    "    if full_loss <= model.best_loss:\n",
+    "        model.best_loss = full_loss\n",
+    "        torch.save({'epoch': epoch + 1, \n",
+    "                    'state_dict': model.state_dict(), \n",
+    "                    'optimizer' : optimizer.state_dict()}, 'checkpoint.pth.tar')\n",
+    "    \n",
     "\n",
     "def test(model, device, test_set):\n",
     "    model.eval()\n",
@@ -196,12 +218,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "repr_in_1 = [(1,0)]\n",
-    "repr_out_1 = [(2,0),(2,1),(2,2),(2,3),(2,4),(2,5)] #,(2,6),(2,7),(2,8),(2,9)]\n",
+    "repr_out_1 = [(2,0),(2,1),(2,2)] #,(2,3),(2,4),(2,5)] #,(2,6),(2,7),(2,8),(2,9)]\n",
     "repr_in_2 = [(2,0),(2,1),(2,2),(2,3),(2,4),(2,5)] #,(2,6),(2,7),(2,8),(2,9)]\n",
     "repr_out_2 = [(1,0),(2,1),(2,2),(2,3)]\n",
     "size = 4\n",
@@ -210,7 +232,7 @@
     "pool_stride = 2\n",
     "bias = True\n",
     "\n",
-    "n_input_1 = 31000\n",
+    "n_input_1 = 18000\n",
     "n_output_1 = 5000 \n",
     "n_output_2 = 50\n",
     "\n",
@@ -221,17 +243,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x\n",
-      "y\n",
-      "x\n",
-      "y\n"
+      "Train Epoch: 1 [1000/6240 (0%)]\tLoss: 1683.684692\n",
+      "Train Epoch: 1 [2000/6240 (0%)]\tLoss: 21494.935547\n",
+      "Train Epoch: 1 [3000/6240 (0%)]\tLoss: 2754.620361\n",
+      "Train Epoch: 1 [4000/6240 (1%)]\tLoss: 11524.377930\n",
+      "Train Epoch: 1 [5000/6240 (1%)]\tLoss: 9824.939453\n",
+      "Train Epoch: 1 [6000/6240 (1%)]\tLoss: 2726.273193\n"
      ]
     }
    ],
@@ -248,16 +272,38 @@
     "decr_rate = 0.995\n",
     "\n",
     "for epoch in range(1, epochs + 1):\n",
-    "    train(model_tenth_order, device, train_set, batch_size, optimizer, epoch, per_epoch, decr_rate)\n",
+    "    train(model_tenth_order, device, test_set, batch_size, optimizer, epoch, per_epoch, decr_rate, 'reslog.txt')\n",
     "    # test(model_hard, device, test_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting Data/density_testf\n",
+      "Extracting Data/density_testf_label\n",
+      "(6240, 13824)\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_name = 'Data/density_testf'\n",
+    "test_set = load_data.read_data_set(test_name, dtype=dtypes.float16, seed = 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    torch.save({'epoch': epoch + 1, \n",
+    "                'state_dict': model_tenth_order.state_dict(), \n",
+    "                'optimizer' : optimizer.state_dict()}, 'checkpoint.pth.tar')"
+   ]
   }
  ],
  "metadata": {
@@ -276,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
